--- a/main.html
+++ b/main.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
+	<title>Clock Timer</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<p id="timer"></p>
+	<script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
